--- a/wordle-v2/src/index.css
+++ b/wordle-v2/src/index.css
@@ -24,6 +24,44 @@
   font-size: xx-large;
 }
 
+.green_tile {
+  border-color: black;
+  border-style: solid;
+  height: 75px;
+  width: 75px;
+  text-align: center;
+  font-size: xx-large;
+  background-color: green;
+
+  transform: scale(1);
+  animation: pulse 2s;
+}
+
+.yellow_tile {
+  border-color: black;
+  border-style: solid;
+  height: 75px;
+  width: 75px;
+  text-align: center;
+  font-size: xx-large;
+  background-color: yellow;
+
+  transform: scale(1);
+  animation: pulse 2s;
+}
+
+.grey_tile {
+  border-color: black;
+  border-style: solid;
+  height: 75px;
+  width: 75px;
+  text-align: center;
+  font-size: xx-large;
+  background-color: grey;
+
+  transform: scale(1);
+  animation: pulse 2s;
+}
 
 .grid {
   display: grid;
@@ -34,4 +72,21 @@
   margin-right: 0;
   padding-left: 0;
   padding-right: 0;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(1.01);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
 }
