--- a/wordle-v2/src/index.css
+++ b/wordle-v2/src/index.css
@@ -22,6 +22,11 @@
   width: 75px;
   text-align: center;
   font-size: xx-large;
+  caret-color: transparent;
+}
+
+input:focus {
+  background-color: rgb(255, 0, 136);
 }
 
 .green_tile {
@@ -31,7 +36,8 @@
   width: 75px;
   text-align: center;
   font-size: xx-large;
-  background-color: green;
+  background-color: rgb(67, 231, 67);
+  caret-color: transparent;
 
   transform: scale(1);
   animation: pulse 2s;
@@ -45,6 +51,7 @@
   text-align: center;
   font-size: xx-large;
   background-color: yellow;
+  caret-color: transparent;
 
   transform: scale(1);
   animation: pulse 2s;
@@ -57,7 +64,8 @@
   width: 75px;
   text-align: center;
   font-size: xx-large;
-  background-color: grey;
+  background-color: lightgray;
+  caret-color: transparent;
 
   transform: scale(1);
   animation: pulse 2s;
@@ -75,18 +83,18 @@
 }
 
 @keyframes pulse {
-	0% {
-		transform: scale(1);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-	}
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
 
-	70% {
-		transform: scale(1.01);
-		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-	}
+  70% {
+    transform: scale(1.01);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
 
-	100% {
-		transform: scale(1);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-	}
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
